--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -558,6 +558,19 @@
         </div>
     </div>
 
+    <!-- Confirmation Modal -->
+    <div id="confirmModal" class="custom-modal">
+        <div class="modal-content" style="max-width:450px;">
+            <h2 id="confirmTitle">Confirm Action</h2>
+            <p id="confirmMessage" style="color:#ccc; margin:20px 0; line-height:1.6;"></p>
+
+            <div style="display:flex; gap:10px; margin-top:20px;">
+                <button id="confirmBtn" class="btn-primary" style="background:var(--danger);">Confirm</button>
+                <button onclick="closeConfirmModal()">Cancel</button>
+            </div>
+        </div>
+    </div>
+
     <!-- CUSTOM CONFIRM MODAL for Table Init -->
     <div id="confirmModal"
         style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:300; align-items:center; justify-content:center;">
@@ -1109,17 +1122,48 @@
             }
         }
 
-        async function deleteCategoryConfirm(id, name) {
-            try {
-                const { error } = await _supabase.from('categories').delete().eq('id', id);
-                if (error) throw error;
+        // Custom confirm modal functions
+        function showConfirmModal(title, message, onConfirm) {
+            const modal = document.getElementById('confirmModal');
+            const titleEl = document.getElementById('confirmTitle');
+            const messageEl = document.getElementById('confirmMessage');
+            const confirmBtn = document.getElementById('confirmBtn');
 
-                showToast('Category "' + name + '" deleted', 'success');
-                await fetchCategories();
-            } catch (err) {
-                console.error('Delete category error:', err);
-                showToast('Failed to delete: ' + err.message, 'error');
-            }
+            titleEl.textContent = title;
+            messageEl.textContent = message;
+            modal.style.display = 'flex';
+
+            // Remove old listeners and add new one
+            const newConfirmBtn = confirmBtn.cloneNode(true);
+            confirmBtn.parentNode.replaceChild(newConfirmBtn, confirmBtn);
+
+            newConfirmBtn.addEventListener('click', () => {
+                closeConfirmModal();
+                onConfirm();
+            });
+        }
+
+        function closeConfirmModal() {
+            document.getElementById('confirmModal').style.display = 'none';
+        }
+
+        async function deleteCategoryConfirm(id, name) {
+            showConfirmModal(
+                'Delete Category',
+                `Delete category "${name}"?\n\nNote: Menu items in this category will keep their category text.`,
+                async () => {
+                    try {
+                        const { error } = await _supabase.from('categories').delete().eq('id', id);
+                        if (error) throw error;
+
+                        showToast('Category "' + name + '" deleted', 'success');
+                        await fetchCategories();
+                    } catch (err) {
+                        console.error('Delete category error:', err);
+                        showToast('Failed to delete: ' + err.message, 'error');
+                    }
+                }
+            );
         }
 
         function filterMenuByCategory(categoryName) {
