--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -558,15 +558,60 @@
         </div>
     </div>
 
-    <!-- Confirmation Modal -->
+    <!-- Confirmation Modal - Redesigned -->
     <div id="confirmModal" class="custom-modal">
-        <div class="modal-content" style="max-width:450px;">
-            <h2 id="confirmTitle">Confirm Action</h2>
-            <p id="confirmMessage" style="color:#ccc; margin:20px 0; line-height:1.6;"></p>
+        <div class="modal-content"
+            style="max-width:480px; padding:35px; border:2px solid rgba(239,68,68,0.3); box-shadow:0 20px 60px rgba(0,0,0,0.5);">
+            <!-- Warning Icon -->
+            <div
+                style="width:70px; height:70px; margin:0 auto 20px; background:rgba(239,68,68,0.15); border-radius:50%; display:flex; align-items:center; justify-content:center; border:3px solid var(--danger);">
+                <svg width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="var(--danger)" stroke-width="2.5">
+                    <path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z">
+                    </path>
+                    <line x1="12" y1="9" x2="12" y2="13"></line>
+                    <line x1="12" y1="17" x2="12.01" y2="17"></line>
+                </svg>
+            </div>
 
-            <div style="display:flex; gap:10px; margin-top:20px;">
-                <button id="confirmBtn" class="btn-primary" style="background:var(--danger);">Confirm</button>
-                <button onclick="closeConfirmModal()">Cancel</button>
+            <!-- Title -->
+            <h2 id="confirmTitle" style="text-align:center; margin-bottom:15px; font-size:24px; font-weight:600;">
+                Confirm Action</h2>
+
+            <!-- Message -->
+            <p id="confirmMessage"
+                style="color:#94a3b8; text-align:center; margin:0 0 30px 0; line-height:1.7; font-size:15px;"></p>
+
+            <!-- Buttons -->
+            <div style="display:flex; gap:12px;">
+                <button id="confirmBtn" style="
+                    flex:1;
+                    padding:14px 24px;
+                    background:var(--danger);
+                    color:white;
+                    border:none;
+                    border-radius:8px;
+                    font-weight:600;
+                    font-size:15px;
+                    cursor:pointer;
+                    transition:all 0.2s;
+                " onmouseover="this.style.background='#dc2626'" onmouseout="this.style.background='var(--danger)'">
+                    Delete
+                </button>
+                <button onclick="closeConfirmModal()" style="
+                    flex:1;
+                    padding:14px 24px;
+                    background:rgba(255,255,255,0.08);
+                    color:#e2e8f0;
+                    border:1px solid rgba(255,255,255,0.1);
+                    border-radius:8px;
+                    font-weight:600;
+                    font-size:15px;
+                    cursor:pointer;
+                    transition:all 0.2s;
+                " onmouseover="this.style.background='rgba(255,255,255,0.12)'"
+                    onmouseout="this.style.background='rgba(255,255,255,0.08)'">
+                    Cancel
+                </button>
             </div>
         </div>
     </div>
