--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -1293,6 +1293,9 @@
             const modal = document.getElementById('menuModal');
             const title = document.getElementById('menuModalTitle');
 
+            console.log('openMenuModal called with itemId:', itemId);
+            console.log('Cached menu data:', window._menuData);
+
             // Reset form
             document.getElementById('menuItemId').value = '';
             document.getElementById('menuName').value = '';
@@ -1322,6 +1325,8 @@
 
                 // Find item in cache
                 const item = window._menuData?.find(i => i.id == itemId);
+                console.log('Found item for editing:', item);
+
                 if (item) {
                     document.getElementById('menuName').value = item.name || '';
                     document.getElementById('menuCategory').value = item.category || '';
